<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_home"
            style="@style/BottomBar_TextView"
            android:drawableTop="@drawable/ic_home"
            android:text="@string/home"></TextView>

        <TextView
            android:id="@+id/tv_products"
            style="@style/BottomBar_TextView"
            android:drawableTop="@drawable/ic_categories"
            android:text="@string/products"></TextView>

        <TextView
            android:id="@+id/tv_collection"
            style="@style/BottomBar_TextView"
            android:drawableTop="@drawable/ic_categories"
            android:text="@string/collections"></TextView>

        <TextView
            android:id="@+id/tv_cart"
            style="@style/BottomBar_TextView"
            android:drawableTop="@drawable/ic_shopping_cart"
            android:text="@string/cart"></TextView>

        <TextView
            android:id="@+id/tv_profile"
            style="@style/BottomBar_TextView"
            android:drawableTop="@drawable/ic_profile"
            android:text="@string/me"></TextView>

    </LinearLayout>
</androidx.cardview.widget.CardView>